--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,21 +3,33 @@
 export(add.let)
 export(autoConverge)
 export(autoDestr)
+export(bad.response)
 export(best.guess)
 export(bin2resp)
 export(chn.let)
+export(combine.responses)
 export(converge)
+export(corr.chn)
 export(destr)
 export(equate)
+export(equate.multi)
 export(finalize)
+export(full.match)
+export(is.letter)
 export(misnomer)
 export(miss.let)
-export(normalize)
+export(multi.word.check)
+export(pluralize)
+export(qwerty.dist)
+export(rm.lead.space)
 export(singularize)
-export(spell.check.database)
+export(spell.check.dictionary)
 export(spell.opt)
 export(splitstr.check)
+export(starting.letter)
 export(textcleaner)
+export(word.check.wrapper)
+importFrom(SemNetDictionaries,load.dictionaries)
 importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(utils,menu)
