--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: SemNetCleaner
 Title: An Automated Cleaning Tool for Semantic and Linguistic Data
-Version: 0.9.9
-Date: 2018-07-27
+Version: 1.0.0
+Date: 2019-06-25
 Author: Alexander P. Christensen
+Contributor: Yoed N. Kenett
 Maintainer: Alexander P. Christensen <alexpaulchristensen@gmail.com>
-Description: Implements several functions that automatize the cleaning, removal of plurals and continuous strings, making the data binary, converging, and finalizing of linguistic data for semantic network analysis.
-Depends: R (>= 3.3.0)
+Description: Implements several functions that automatize the cleaning, binarizing, and spell-checking of text data. Also converges, finalizes, and removes plurals and continuous strings from text data for semantic network analysis. Uses the 'SemNetDictionaries' package to make the cleaning process more accurate, efficient, and reproducible.
+Depends: R (>= 3.5.0), SemNetDictionaries (>= 0.1.2)
 License: GPL (>= 3.0)
+URL: https://github.com/AlexChristensen/SemNetCleaner
+BugReports: https://github.com/AlexChristensen/SemNetCleaner/issues
+NeedsCompilation: no
 Encoding: UTF-8
 LazyData: true
-Imports: qdap
-RoxygenNote: 6.0.1.9000
+Imports: qdap, searcher, stringdist
+RoxygenNote: 6.1.1
