--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: SemNetCleaner
 Title: An Automated Cleaning Tool for Semantic and Linguistic Data
-Version: 1.0.0
-Date: 2019-06-25
-Author: Alexander P. Christensen
-Contributor: Yoed N. Kenett
+Version: 1.1.1
+Date: 2019-08-26
+Authors@R: c(person("Alexander P.", "Christensen", email = "alexpaulchristensen@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9798-7037")))
 Maintainer: Alexander P. Christensen <alexpaulchristensen@gmail.com>
-Description: Implements several functions that automatize the cleaning, binarizing, and spell-checking of text data. Also converges, finalizes, and removes plurals and continuous strings from text data for semantic network analysis. Uses the 'SemNetDictionaries' package to make the cleaning process more accurate, efficient, and reproducible.
-Depends: R (>= 3.5.0), SemNetDictionaries (>= 0.1.2)
+Description: Implements several functions that automates the cleaning and spell-checking of text data. Also converges, finalizes, removes plurals and continuous strings, and puts text data in binary format for semantic network analysis. Uses the 'SemNetDictionaries' package to make the cleaning process more accurate, efficient, and reproducible.
+Depends: R (>= 3.5.0), SemNetDictionaries (>= 0.1.3)
 License: GPL (>= 3.0)
 URL: https://github.com/AlexChristensen/SemNetCleaner
 BugReports: https://github.com/AlexChristensen/SemNetCleaner/issues
 NeedsCompilation: no
 Encoding: UTF-8
 LazyData: true
-Imports: qdap, searcher, stringdist
+Imports: hunspell, searcher, stringdist, tcltk
 RoxygenNote: 6.1.1
