--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(moniker)
 export(multi.word.check)
 export(pluralize)
 export(qwerty.dist)
+export(read.data)
 export(rm.lead.space)
 export(singularize)
 export(spell.check.dictionary)
@@ -28,6 +29,9 @@ export(word.check.wrapper)
 importFrom(SemNetDictionaries,load.dictionaries)
 importFrom(stats,na.omit)
 importFrom(stats,sd)
+importFrom(tools,file_ext)
 importFrom(utils,menu)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
