bug fix for `equate` and `pluralize`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(multi.word.check)
 export(pluralize)
 export(qwerty.dist)
 export(read.data)
+export(resp2bin)
 export(rm.lead.space)
 export(singularize)
 export(spell.check.dictionary)
