--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ NeedsCompilation: no
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.6.0), SemNetDictionaries (>= 0.1.5)
-Imports: stringdist, hunspell, searcher, tcltk, foreign, readxl, R.matlab, stringi, crayon
+Imports: stringdist, hunspell, searcher, tcltk, foreign, readxl, R.matlab, stringi
 Suggests: knitr, rmarkdown, htmlTable
 VignetteBuilder: knitr
 RoxygenNote: 7.1.0
