--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(tools,file_ext)
 importFrom(utils,adist)
+importFrom(utils,edit)
 importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
