--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,6 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.6.0), SemNetDictionaries (>= 0.1.8)
 Imports: stringdist, searcher, tcltk, foreign, readxl, R.matlab, stringi, rstudioapi, easycsv
-Suggests: knitr, htmlTable
+Suggests: knitr, htmlTable, markdown, rmarkdown
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
