bug fix for Shiny `correct.changes`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,4 +24,5 @@ importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
+importFrom(utils,write.csv)
 importFrom(utils,write.table)
